2010-04-05  Juri Linkov  <juri@jurta.org>

	Scrolling commands which scroll a line instead of full screen.
	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01452.html

	* simple.el (scroll-up-line, scroll-down-line): New commands.
	Put property isearch-scroll=t on them.

	* emulation/ws-mode.el (scroll-down-line, scroll-up-line):
	Remove commands.

2010-04-05  Juri Linkov  <juri@jurta.org>

	Scrolling commands which does not signal errors at top/bottom.
	http://lists.gnu.org/archive/html/emacs-devel/2010-03/msg01452.html

	* simple.el (scroll-up-command, scroll-down-command): New commands.
	Put property isearch-scroll=t on them.

	* bindings.el (global-map): Rebind [prior] from `scroll-down' to
	`scroll-down-command' and [next] from `scroll-up' to
	`scroll-up-command'.

	* emulation/cua-base.el: Put property CUA=move on
	`scroll-up-command' and `scroll-down-command'.
	(cua--init-keymaps): Remap `scroll-up-command' to `cua-scroll-up'
	and `scroll-down-command' to `cua-scroll-down'.

2010-04-05  Juanma Barranquero  <lekktu@gmail.com>

	* help.el (describe-mode): Return nil.

2010-04-04  John Wiegley  <jwiegley@gmail.com>

	* ido.el (ido-use-virtual-buffers): New variable to indicate
	whether "virtual buffer" support is enabled for IDO.  Essentially
	it works as follows: Say you are visiting a file and the buffer
	gets cleaned up by mignight.el.  Later, you want to switch to that
	buffer, but find it's no longer open.  With virtual buffers
	enabled, the buffer name stays in the buffer list (using the
	ido-virtual face, and always at the end), and if you select it, it
	opens the file back up again.  This allows you to think less about
	whether recently opened files are still open or not.  Most of the
	time you can quit Emacs, restart, and then switch to a file buffer
	that was previously open as if it still were.  NOTE: This feature
	has been present in iswitchb for several years now, and I'm
	porting the same logic to IDO.